--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!-- card 1 -->
                 <div class="card">
                     <img src="./img/1-1.jpg" />
-                    <h3>Bootstrap v3.3.6</h3>
+                    <h3 class="green-text">Bootstrap v3.3.6</h3>
                     <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus
                         ullamcorper
                         auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna,
@@ -46,19 +46,19 @@
                 <!-- card 2 -->
                 <div class="card">
                     <img src="./img/1-2.jpg" />
-                    <h3>Responsive Design</h3>
+                    <h3 class="blue-text">Responsive Design</h3>
                     <p>Conquer Template is provided by TemplateMo for free of charge. You can use this template for any
                         kind
                         of website. No credit link is required. All images by Unsplash. Thank you for visiting our
                         website.
                         Please come again!</p>
-                    <button class="see-details">See Details</button>
+                    <button class="details-button">See Details</button>
                 </div>
 
                 <!-- card 3 -->
                 <div class="card">
                     <img src="./img/1-3.jpg" />
-                    <h3>Parallax Layout</h3>
+                    <h3 class="gray-text">Parallax Layout</h3>
                     <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus
                         ullamcorper
                         auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna,
