--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="section2">
 
             <div class="card-wrapper">
-                <!-- card 1 -->
-                <div class="card">
+                <!-- section 2 card 1 -->
+                <div class="card-normal">
                     <img src="./img/1-1.jpg" />
                     <h3 class="green-text">Bootstrap v3.3.6</h3>
                     <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus
@@ -43,8 +43,8 @@
                     <button class="button-green">Button Green</button>
                 </div>
 
-                <!-- card 2 -->
-                <div class="card">
+                <!-- section 2 card 2 -->
+                <div class="card-normal">
                     <img src="./img/1-2.jpg" />
                     <h3 class="blue-text">Responsive Design</h3>
                     <p>Conquer Template is provided by TemplateMo for free of charge. You can use this template for any
@@ -55,10 +55,10 @@
                     <button class="details-button">See Details</button>
                 </div>
 
-                <!-- card 3 -->
-                <div class="card">
+                <!-- section 2 card 3 -->
+                <div class="card-normal">
                     <img src="./img/1-3.jpg" />
-                    <h3 class="gray-text">Parallax Layout</h3>
+                    <h3>Parallax Layout</h3>
                     <p>Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus
                         ullamcorper
                         auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna,
@@ -72,12 +72,139 @@
 
         <!-- section 3 -->
         <div class="section3">
+            <div class="card-wrapper">
 
+                <!-- section 3 card 1 -->
+                <div class="card-wide">
+                    <img src="./img/2-1.jpg" />
+                    <h3>Two Column Left Side</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros
+                        maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim
+                        varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+
+                    <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt
+                        massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in
+                        blandit metus.</p>
+                </div>
+
+                <!-- section 3 card 2 -->
+                <div class="card-wide">
+                    <img src="./img/2-2.jpg" />
+                    <h3>Two Column Right Side</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros
+                        maximus, ut cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim
+                        varius suscipit. Sed in leo sit amet velit finibus pretium.</p>
+
+                    <p>Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt
+                        massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in
+                        blandit metus.</p>
+                    <div class="right-justify">
+                        <button class="button-white">Read More</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- section 4 -->
         <div class="section4">
+            <h1>Our Services</h1>
+            <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
+                felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
+                Etiam a mi quis arcu varius condimentum.</p>
+        </div>
 
+        <!-- section 5 -->
+        <div class="section5">
+
+            <div class="card-wrapper">
+
+                <!-- section 5 card 1 -->
+                <div class="card-slim">
+                    <img src="./img/4-1.jpg" />
+                    <h3>Column One</h3>
+                    <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium
+                        quis. Fusce posuere egestas enim eu viverra.</p>
+                </div>
+
+                <!-- section 5 card 2 -->
+                <div class="card-slim">
+                    <img src="./img/4-2.jpg" />
+                    <h3>Column Two</h3>
+                    <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium
+                        quis.</p>
+                    <button class="button-white">Read It</button>
+                </div>
+
+                <!-- section 5 card 3 -->
+                <div class="card-slim">
+                    <img src="./img/4-3.jpg" />
+                    <h3>Column Three</h3>
+                    <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium
+                        quis. Fusce posuere egestas enim eu viverra.</p>
+                </div>
+
+                <!-- section 5 card 4 -->
+                <div class="card-slim">
+                    <img src="./img/4-4.jpg" />
+                    <h3>Column Four</h3>
+                    <p>Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium
+                        quis.</p>
+                    <button class="button-white">Details</button>
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- section 6 -->
+        <div class="section6">
+
+            <div class="card-wrapper">
+
+                <!-- section 6 card 1 -->
+                <div class="card-ultra-wide">
+                    <img src="./img/4-5.jpg" />
+                    <h3>One Big Column</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor eros eget eros maximus, ut
+                        cursus sem euismod. Donec iaculis tristique odio at consectetur. Nullam dignissim varius
+                        suscipit. Sed in leo sit amet velit finibus pretium. Vivamus dictum nisi ac fermentum interdum.
+                        Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed
+                        tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis
+                        magna, in blandit metus. Praesent volutpat cursus rhoncus. Aenean arcu diam, suscipit ac neque
+                        in, sollicitudin convallis orci.</p>
+                    <p>Fusce eu porta massa, sed tincidunt turpis. Cum sociis natoque penatibus et magnis dis parturient
+                        montes, nascetur ridiculus mus. Vivamus a urna tellus. Integer pharetra vitae nisi et lacinia.
+                        Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus
+                        ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis
+                        lectus magna, ornare ac scelerisque quis, maximus eget nisi.</p>
+                    <button class="button-white">Read More</button>
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- section 7 -->
+        <div class="section7">
+            <h1>Contact Form</h1>
+            <div class="light-gray-background contact-panel">
+                <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id felis ligula.
+                    In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius
+                    condimentum.</p>
+            </div>
+            <div class="form-wrapper">
+                <form>
+                    <div class="form-left-column">
+                        <input class="light-gray-background" type="text" name="name" placeholder="Name" />
+                        <input class="light-gray-background" type="text" name="email" placeholder="Email" />
+                        <input class="light-gray-background" type="text" name="subject" placeholder="Subject" />
+                    </div>
+                    <div class="form-right-column">
+                        <textarea class="light-gray-background" name="message"
+                            placeholder="Your message here..."></textarea>
+                    </div>
+                </form>
+            </div>
         </div>
 
         <!-- footer -->
